--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,15 @@ services:
       volumes:
         - .:/app
       restart: always
+      
+    mysql:
+      container_name: mysql
+      image: mysql:latest
+      ports:
+        - "3306:3306"
+      volumes:
+        - ./database:/docker-entrypoint-initdb.d/:ro
+      restart: always
+      environment:
+        MYSQL_ROOT_PASSWORD: Hassan123+
+        MYSQL_DATABASE: simulio   
