--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,13 @@ services:
       environment:
         MYSQL_ROOT_PASSWORD: Hassan123+
         MYSQL_DATABASE: simulio   
+
+    react_frontend:
+      build: 
+        context: ./web
+        dockerfile: Dockerfile
+      ports:
+        - "5173:5173"
+      volumes:
+        - ./web/src:/app/src
+      restart: always
