--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,5 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-ENV FLASK_APP=app.py
+ENV FLASK_APP=run.py
 CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
